# ONNXcustom-operator

./: .rlcustom_operator.cpp.swp  CMakeLists.txt  Image_similarity_measure.csv  Image_similarity_measure.py  ONNX_inference.py  ONNX_op_export.py  README.md  installSwapfile  model_first.onnx  pytorch_resnet_ONNX copy.py  pytorch_resnet_ONNX.py  rlcustom_operator.cpp  setup.py
cpp_dev_folder/: rlcustom_operator.cpp
reduction.egg-info/: PKG-INFO  SOURCES.txt
rlcustom_operator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
